--- a/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
+++ b/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
@@ -8,12 +8,9 @@
         Title="Designer Window" Width="1495" Height="1095">
 
     <Window.CommandBindings>
-        <CommandBinding Command="local:CustomCommands.ProjectSave" CanExecute="SaveCommand_CanExecute" Executed="SaveCommand_Executed" />
-        <CommandBinding Command="local:CustomCommands.ProjectSaveAs" CanExecute="SaveAsCommand_CanExecute" Executed="SaveAsCommand_Executed" />
-        <CommandBinding Command="local:CustomCommands.ProjectEditCoords" CanExecute="EditCoordsCommand_CanExecute" Executed="EditCoordsCommand_Executed" />
-
-        <CommandBinding Command="local:CustomCommands.JobGoBack" CanExecute="GoBack_CanExecute" Executed="GoBack_Executed" />
-        <CommandBinding Command="local:CustomCommands.JobGoForward" CanExecute="GoForward_CanExecute" Executed="GoForward_Executed" />
+        <CommandBinding Command="local:CustomCommands.PosterSave" CanExecute="SaveCommand_CanExecute" Executed="SaveCommand_Executed" />
+        <CommandBinding Command="local:CustomCommands.PosterSaveAs" CanExecute="SaveAsCommand_CanExecute" Executed="SaveAsCommand_Executed" />
+        <CommandBinding Command="local:CustomCommands.PosterEditCoords" CanExecute="EditCoordsCommand_CanExecute" Executed="EditCoordsCommand_Executed" />
 
         <CommandBinding Command="local:CustomCommands.PanLeft" CanExecute="Pan_CanExecute" Executed="PanLeft_Executed" />
         <CommandBinding Command="local:CustomCommands.PanUp" CanExecute="Pan_CanExecute" Executed="PanUp_Executed" />
@@ -43,10 +40,10 @@
             <MenuItem Header="_Poster">
                 <!--<MenuItem Header="_New" Click="NewButton_Click"/>-->
                 <MenuItem Header="_Open" Click="OpenButton_Click"/>
-                <MenuItem Header="_Save" Command="local:CustomCommands.ProjectSave" />
-                <MenuItem Header="Save_As" Command="local:CustomCommands.ProjectSaveAs" />
+                <MenuItem Header="_Save" Command="local:CustomCommands.PosterSave" />
+                <MenuItem Header="Save_As" Command="local:CustomCommands.PosterSaveAs" />
                 <Separator/>
-                <MenuItem Header="Edit Coor_ds" Command="local:CustomCommands.ProjectEditCoords"/>
+                <MenuItem Header="Edit Coor_ds" Command="local:CustomCommands.PosterEditCoords"/>
                 <Separator/>
                 <MenuItem Header="_Close And Return" Click="CloseAndReturnButton_Click" />
                 <MenuItem Header="_Exit Program" Click="ExitButton_Click" />
