--- a/src/MSetExplorer/Explorer/ExplorerWindow.xaml
+++ b/src/MSetExplorer/Explorer/ExplorerWindow.xaml
@@ -20,6 +20,12 @@
         <CommandBinding Command="local:CustomCommands.PanRight" CanExecute="Pan_CanExecute" Executed="PanRight_Executed" />
         <CommandBinding Command="local:CustomCommands.PanDown" CanExecute="Pan_CanExecute" Executed="PanDown_Executed" />
 
+        <CommandBinding Command="local:CustomCommands.ZoomOut12" CanExecute="ZoomOut_CanExecute" Executed="ZoomOut12_Executed" />
+        <CommandBinding Command="local:CustomCommands.ZoomOut25" CanExecute="ZoomOut_CanExecute" Executed="ZoomOut25_Executed" />
+        <CommandBinding Command="local:CustomCommands.ZoomOut50" CanExecute="ZoomOut_CanExecute" Executed="ZoomOut50_Executed" />
+        <CommandBinding Command="local:CustomCommands.ZoomOut100" CanExecute="ZoomOut_CanExecute" Executed="ZoomOut100_Executed" />
+        <CommandBinding Command="local:CustomCommands.ZoomOutCustom" CanExecute="ZoomOut_CanExecute" Executed="ZoomOutCustom_Executed" />
+
         <CommandBinding Command="local:CustomCommands.ColorsOpen" CanExecute="ColorsOpenCommand_CanExecute" Executed="ColorsOpenCommand_Executed" />
         <!--<CommandBinding Command="local:CustomCommands.ColorsSave" CanExecute="ColorsSaveCommand_CanExecute" Executed="ColorsSaveCommand_Executed" />-->
         <CommandBinding Command="local:CustomCommands.ColorsSaveAs" CanExecute="ColorsSaveAsCommand_CanExecute" Executed="ColorsSaveAsCommand_Executed" />
@@ -86,6 +92,14 @@
                 <MenuItem Header="Pan _Up" Command="local:CustomCommands.PanUp" />
                 <MenuItem Header="Pan _Right" Command="local:CustomCommands.PanRight" />
                 <MenuItem Header="Pan _Down" Command="local:CustomCommands.PanDown" />
+                <Separator/>
+                <MenuItem Header="Zoom Out">
+                    <MenuItem Header="12%" Command="local:CustomCommands.ZoomOut12" />
+                    <MenuItem Header="25%" Command="local:CustomCommands.ZoomOut25" />
+                    <MenuItem Header="50%" Command="local:CustomCommands.ZoomOut50" />
+                    <MenuItem Header="100%" Command="local:CustomCommands.ZoomOut100" />
+                    <MenuItem Header="Custom" Command="local:CustomCommands.ZoomOutCustom" />
+                </MenuItem>
             </MenuItem>
 
         </Menu>
