--- a/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
+++ b/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
@@ -113,11 +113,13 @@
             <Border Grid.Row="1" BorderThickness="0.75" BorderBrush="Black" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="0,10">
                 
                 <StackPanel  Orientation="Vertical">
-                    <TextBlock Margin="10,10,0,5" >Zoom:</TextBlock>
+                    <Button Click="ButtonSetMaxZoom_Click">Max</Button>
+                    <TextBlock Margin="10,10,0,5"  >Zoom:</TextBlock>
                     <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,5" x:Name="dispSecZoom">
                         <TextBlock x:Name="txtblkZoomValue" Margin="5,95,2,0" >100%</TextBlock>
                         <ScrollBar x:Name="scrBarZoom" Margin="5,0,5,5" Orientation="Vertical" Height="200"/>
                     </StackPanel>
+                    <Button Click="ButtonSetMinZoom_Click" >Min</Button>
                 </StackPanel>
                 
             </Border>
