--- a/src/MSetExplorer/PosterSizeEditor/PosterSizeEditorDialog.xaml
+++ b/src/MSetExplorer/PosterSizeEditor/PosterSizeEditorDialog.xaml
@@ -21,12 +21,26 @@
 
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,5">
                     <TextBlock Width="50" Margin="10,0,5,0" FontSize="16" Text="Width:" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtWidth" Text="{Binding CanvasSize.Width}" Width="100" Height="22"/>
+                    <TextBox x:Name="txtWidth" Text="{Binding Width}" Width="80" Height="22"/>
+
+                    <TextBlock Width="115" Margin="20,0,5,0" FontSize="16" Text="Original Width:" VerticalAlignment="Center"/>
+                    <TextBlock  Width="80" FontSize="16" Text="{Binding OriginalWidth}" VerticalAlignment="Center"/>
+
+                    <TextBlock Width="95" Margin="20,0,5,0" FontSize="16" Text="Aspect Ratio:" VerticalAlignment="Center"/>
+                    <TextBlock Width="65" FontSize="16" Text="{Binding AspectRatio}" VerticalAlignment="Center"/>
+
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,10">
                     <TextBlock Width="50" Margin="10,0,5,0" FontSize="16" Text="Height:" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtHeight" Text="{Binding CanvasSize.Height}" Width="100" Height="22"/>
+                    <TextBox x:Name="txtHeight" Text="{Binding Height}" Width="80" Height="22"/>
+
+                    <TextBlock Width="115" Margin="20,0,5,0" FontSize="16" Text="Original Height:" VerticalAlignment="Center"/>
+                    <TextBlock Width="80" FontSize="16" Text="{Binding OriginalHeight}" VerticalAlignment="Center"/>
+
+                    <TextBlock Width="155" Margin="20,0,5,0" FontSize="16" Text="Original Aspect Ratio:" VerticalAlignment="Center"/>
+                    <TextBlock Width="65" FontSize="16" Text="{Binding OriginalAspectRatio}" VerticalAlignment="Center"/>
+
                 </StackPanel>
 
             </StackPanel>
@@ -56,17 +70,13 @@
                 </Border>
             </DockPanel>
 
-
         </Grid>
 
-
         <Border Grid.Row="2" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                 <Button Name="btnSave" HorizontalAlignment="Center" Width="140" FontSize="16" Margin="10" Click="SaveButton_Click" IsDefault="True" >Apply Changes</Button>
                 <Button Name="btnCancel" HorizontalAlignment="Center" Width="140" FontSize="16" Margin="10" Click="CancelButton_Click" IsCancel="True">_Cancel</Button>
             </StackPanel>
-
         </Border>
 
     </Grid>
