--- a/src/MSetExplorer/PosterSizeEditor/PosterSizeEditorDialog.xaml
+++ b/src/MSetExplorer/PosterSizeEditor/PosterSizeEditorDialog.xaml
@@ -11,6 +11,7 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -50,69 +51,43 @@
             </StackPanel>
 
         </Border>
-
-        <Grid  Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="20"/>
-
-            </Grid.RowDefinitions>
-    
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+        <Border Grid.Row="1" x:Name="OffsetsPanel" Visibility="Visible">
 
             <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical">
-                <TextBlock Margin="10,40,0,2">Horizontal</TextBlock>
                 <Border BorderThickness="0.75" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10,0">
                     <StackPanel Orientation="Vertical">
 
-                        <StackPanel Orientation="Horizontal" Margin="0,10,0,5">
-                            <CheckBox Margin="10,0" FontSize="16" VerticalContentAlignment="Center" IsChecked="{Binding PreserveWidth}">Preserve Width</CheckBox>
-                        </StackPanel>
-                        
-                        <StackPanel Orientation="Horizontal" Margin="0,10,0,5">
-                            <TextBlock Width="50" Margin="10,0,5,0" FontSize="16" Text="Before:" VerticalAlignment="Center"/>
-                            <TextBox x:Name="txtBeforeX" Text="{Binding BeforeX, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Width="80" Height="22"/>
-                        </StackPanel>
+                        <TextBlock Margin="10,5,0,0">Horizontal Offsets</TextBlock>
 
-                        <StackPanel Orientation="Horizontal" Margin="0,10,0,5">
-                            <TextBlock Width="50" Margin="10,0,5,0" FontSize="16" Text="After:" VerticalAlignment="Center"/>
+                        <StackPanel Orientation="Horizontal" Margin="0,5">
+                            <CheckBox Margin="10,0" FontSize="16" VerticalContentAlignment="Center" IsChecked="{Binding PreserveWidth}" Width="135" >Preserve Width</CheckBox>
+                            
+                            <TextBlock Margin="15,0,5,0" FontSize="16" Text="Before:" VerticalAlignment="Center" Width="50"/>
+                            <TextBox x:Name="txtBeforeX" Text="{Binding BeforeX, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Width="80" Height="22"/>
+
+                            <TextBlock Margin="15,0,5,0" FontSize="16" Text="After:" VerticalAlignment="Center" Width="50"/>
                             <TextBox x:Name="txtAfterX" Text="{Binding AfterX, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Width="80" Height="22"/>
                         </StackPanel>
 
-                    </StackPanel>
-                </Border>
+                        <TextBlock Margin="10,5,0,0">Vertical Offsets</TextBlock>
 
-                <TextBlock Margin="10,40,0,2">Vertical</TextBlock>
-                <Border BorderThickness="0.75" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10,0">
-                    <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal" Margin="0,5">
+                            <CheckBox Margin="10,0" FontSize="16" VerticalContentAlignment="Center" IsChecked="{Binding PreserveHeight}" Width="135" >Preserve Height</CheckBox>
 
-                        <StackPanel Orientation="Horizontal" Margin="0,10,0,5">
-                            <CheckBox Margin="10,0" FontSize="16" VerticalContentAlignment="Center" IsChecked="{Binding PreserveHeight}">Preserve Height</CheckBox>
-                        </StackPanel>
-
-                        <StackPanel Orientation="Horizontal" Margin="0,10,0,5">
-                            <TextBlock Width="50" Margin="10,0,5,0" FontSize="16" Text="Before:" VerticalAlignment="Center"/>
+                            <TextBlock Margin="15,0,5,0" FontSize="16" Text="Before:" VerticalAlignment="Center" Width="50"/>
                             <TextBox x:Name="txtBeforeY" Text="{Binding BeforeY, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Width="80" Height="22"/>
-                        </StackPanel>
 
-                        <StackPanel Orientation="Horizontal" Margin="0,10,0,5">
-                            <TextBlock Width="50" Margin="10,0,5,0" FontSize="16" Text="After:" VerticalAlignment="Center"/>
+                            <TextBlock Margin="15,0,5,0" FontSize="16" Text="After:" VerticalAlignment="Center" Width="50"/>
                             <TextBox x:Name="txtAfterY" Text="{Binding AfterY, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Width="80" Height="22"/>
                         </StackPanel>
 
                     </StackPanel>
                 </Border>
 
-
-
             </StackPanel>
+        </Border>
             
-            <DockPanel Grid.Row="1" Grid.Column="1" LastChildFill="True" Margin="0,0,10,0">
+            <DockPanel Grid.Row="2" LastChildFill="True" Margin="0,0,10,0">
                 <TextBlock DockPanel.Dock="Top" Margin="5,0,0,3">Preview:</TextBlock>
                     
                 <Border BorderThickness="0.75" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -120,9 +95,7 @@
                 </Border>
             </DockPanel>
 
-        </Grid>
-
-        <Border Grid.Row="2" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Border Grid.Row="3" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                 <Button Name="btnSave" HorizontalAlignment="Center" Width="140" FontSize="16" Margin="10" Click="SaveButton_Click" IsDefault="True" >Apply Changes</Button>
                 <Button Name="btnCancel" HorizontalAlignment="Center" Width="140" FontSize="16" Margin="10" Click="CancelButton_Click" IsCancel="True">_Cancel</Button>
